# RunnerBuddy

./: PLAN.md  README.md  package-lock.json  package.json  plan2.md  runnerbuddy  runnerbuddy.cmd  tailwind.config.cjs
.github/workflows/: publish.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  discovery.rs  errors.rs  github_api.rs  lib.rs  logging.rs  logs.rs  main.rs  runner_mgmt.rs  secrets.rs  state.rs  util.rs
src-tauri/src/service_mgmt/: linux.rs  macos.rs  mod.rs  windows.rs
src/lib/: api.ts  confirm.ts  errors.ts  format.ts
src/lib/components/: ConfirmDialog.svelte  ScopePicker.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/onboarding/: +page.svelte
