[package]
name = "runnerbuddy"
version = "0.1.0"
description = "RunnerBuddy desktop app"
authors = ["RunnerBuddy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "runnerbuddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "test"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2.0.0"
tauri-plugin-updater = "2.0.0"
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
directories = "5"
keyring = "2"
tar = "0.4"
flate2 = "1"
zip = "2"
sha2 = "0.10"
hex = "0.4"
regex = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1", features = ["v4"] }
plist = "1.6"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
